# capsule

./: .gitignore  .ocamlformat  CREDITS.md  Makefile  README.md  capsule.opam  capsule.opam.template  capsule.toml  dune-project
.github/workflows/: pfioooouuuu.yml
assets/: CNAME
assets/css/: capsule.css  fonts.css  hl.css  reset.css
assets/syntaxes/: haskell.json  java.json  kotlin.json  lisp.json
assets/templates/: address.html  blog-index-en.html  gallery.html  index.html  journal-entry.html  journal-feed.html  layout-en.html  layout.html  logs-summary.html  page-header-en.html  page-header.html  page.html  readings.html  speaking.html
client/: beacon.ml  beacon.mli  bindings.mli  capsule_client.ml  dapp_transfer.ml  dapp_transfer.mli  dom_helper.ml  dom_helper.mli  dune  hljs.ml  hljs.mli  vdom_ui.ml  vdom_ui.mli
config/: CNAME
content/: bars.md  books.yml  coffee.md  dapps.md  emacs.md  feeds.md  galleries.md  games.md  index.md  journal.md  opinions.md  programming.md  readings.yml  tricks.md  types.md
content/addresses/: copain.md  ethylo.md  wappers.md
content/en/: index.md
content/galleries/: cosmic-atlantis.md  lyon.md  machines.md  misc.md  never-ended-inktober-2023.md  nyc.md  rouen.md
content/indexes/: bars.md  coffee.md  feeds.md  galleries.md  games.md  index.md  links.md  programming.md  tools.md
content/journal/: 2023-10-20_06-07-35.md  2023-10-24_11-19-35.md  2023-10-27_20-45-05.md  2023-11-01_13-49-55.md  2023-11-07_17-22-37.md  2023-11-14_15-20-50.md  2023-12-29_18-23-07.md  2023-12-30_12-02-57.md  2023-12-31_15-22-41.md  2024-01-31_15-41-13.md  2024-03-12_13-33-29.md  2024-09-21_16-25-07.md  2024-12-14_14-00-00.md  2025-07-20-00-00.md
content/pages/: GADTs.md  Refl.md  colophon.md  emacs-occurs-long-line.md  emacs-yasnippet.md  ethylo.md  modules-import.md  notion-coffee.md  ocaml-merlin-destruct.md  oop-refl.md  test.md  tetra-master.md  why-ocaml.md
content/specifics/: activity.md  journal.yml  now.md  readings.md  speaking.md
content/talks/: axa-bbl-pf.md  blockchain-societe-tezos.md  bob2025-merlin.md  bob2026-modules.md  breizh-camp-elevator.md  capitole-libre-ocsigen.md  chtijs-11-2015.md  chtijs-20-binding.md  codeurs-en-seine-effect.md  codeurs-en-seine-web3.md  dej-tech-web.md  dej-tech.md  devoxxfr-modules.md  forkit2024-tacit.md  forkit2026-unikernels.md  frontend-beer-formlet.md  functional-scala-build-system.md  funocaml-2025.md  gdg-effect.md  ifttd-tezos.md  js-nodejs-dc.md  lambdalille-arrow-kotlin-fp.md  lambdalille-effet.md  lambdanantes-build.md  lambdanantes-oop-deps.md  lambdanantes-oop-refl.md  lambdanantes-unikernel.md  lille-dotnet-fsharp.md  lille-elixir-1.md  mixit-elm.md  (+26 more)
css/: default.css  fonts.css
diagrams/: coffee-bean.d2  coffee-exp.d2  coffee-farm.d2  coffee-roaster.d2  coffee-to-cup.d2
fonts/: inconsolata-v30-latin-ext_latin-200.eot  inconsolata-v30-latin-ext_latin-300.eot  inconsolata-v30-latin-ext_latin-500.eot  inconsolata-v30-latin-ext_latin-600.eot  inconsolata-v30-latin-ext_latin-700.eot  inconsolata-v30-latin-ext_latin-800.eot  inconsolata-v30-latin-ext_latin-900.eot  inria-serif-v14-latin-ext_latin-300.eot  inria-serif-v14-latin-ext_latin-300italic.eot  inria-serif-v14-latin-ext_latin-700.eot  inria-serif-v14-latin-ext_latin-700italic.eot  inria-serif-v14-latin-ext_latin-italic.eot  inria-serif-v14-latin-ext_latin-regular.eot  libre-franklin-v12-latin-ext_latin-100.eot  libre-franklin-v12-latin-ext_latin-100italic.eot  libre-franklin-v12-latin-ext_latin-700.eot  libre-franklin-v12-latin-ext_latin-700italic.eot  libre-franklin-v12-latin-ext_latin-900.eot  libre-franklin-v12-latin-ext_latin-900italic.eot
hell/: README.md  package-lock.json  package.json  rollup.config.js  webpack.config.js
images/: ces-cover.kra  rss-cover.kra  tetra-card-template.kra
js/: capsule_js.ml  dune  hl.js
kohai/: state.rens
lib/: dune  file.ml  file.mli  hljs.ml  hljs.mli  markdown.ml  model.ml  model.mli  rule.ml  rule.mli  target.ml  target.mli  util.ml  util.mli
lib/generator/: action.ml  action.mli  dune  feed.ml  feed.mli  file.ml  file.mli  intf.mli  layout.ml  layout.mli  log.ml  log.mli  markdown.ml  markdown.mli  model.ml  model.mli  project.ml  project.mli  resolver.ml  rule.ml  rule.mli  target.ml  target.mli  util.ml  util.mli
lib/generator/archetype/: activity_state.ml  activity_state.mli  address.ml  address.mli  blog_entry.ml  blog_entry.mli  common.ml  common.mli  config.ml  config.mli  en_blog.ml  en_blog.mli  gallery.ml  journal.ml  journal.mli  journal_entry.ml  journal_entry.mli  journal_feed.ml  journal_feed.mli  logset.ml  logset.mli  page.ml  page.mli  project.ml  project.mli  raw.ml  raw.mli  readings.ml  readings.mli  speaking.ml  talk.ml  talk.mli  translated_page.ml  types.ml
lib/generator/model/: book.ml  book.mli  cover.ml  cover.mli  entry.ml  entry.mli  identity.ml  identity.mli  index.ml  index.mli  indexes.ml  indexes.mli  isbn.ml  isbn.mli  key_value.ml  key_value.mli  link.ml  link.mli  meta.mli  model_util.ml  reading.ml  reading.mli  repo.ml  sort.ml  sort.mli  svg.mli  temporal_note.ml  temporal_note.mli  types.ml  url.ml  url.mli
playground/: dune  exp.ml
templates/: address.html  comments.html  dapp.html  entry.html  gallery.html  indexes.html  journal.html  layout.html  page-header.html  page.html
test/: dune  util.md
(+632 files in other folders)
