opam-version: "2.0"
version: "dev"
synopsis: "Microblogging for fun an profit"
maintainer: "xaviervdw@gmail.com"
authors: [ "Xavier Van de Woestyne <xaviervdw@gmail.com>" ]

build: [
  [ "dune" "subst" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
]

license: "GPL-3.0-or-later"
tags: [ "blog" "yocaml" ]
homepage: "https://github.com/xvw/capsule"
dev-repo: "git://github.com/xvw/capsule.git"
bug-reports: "https://github.com/xvw/capsule/issues"

depends: [
  "ocaml" { >= "4.14.0" }
  "dune" { >= "3.2" }
  "logs" {>= "0.7.0" }
  "cmdliner" { >= "1.0.0"}
  "preface" { >= "0.1.0"}
  "yocaml" {pinned}
  "yocaml_unix" {pinned}
  "yocaml_yaml" {pinned}
  "yocaml_markdown" {pinned}
  "yocaml_jingoo" {pinned}
  "mdx" {with-test}
  "merlin"
  "ocamlformat"
  "ocp-indent"
  "utop"
]

pin-depends: [
  ["yocaml.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
  ["yocaml_unix.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
  ["yocaml_yaml.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
  ["yocaml_markdown.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
  ["yocaml_jingoo.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
]
