(library
 (name generator)
 (public_name capsule.generator)
 (libraries
  capsule.std
  yocaml
  yocaml_yaml
  yocaml_otoml
  yocaml_jingoo
  yocaml_cmarkit
  yocaml_syndication
  cmarkit
  kohai.core
  kohai.model
  yocaml_kohai
  yocaml_rensai)
 (modules_without_implementation intf))

(include_subdirs qualified)
