(library
 (name generator)
 (public_name capsule.generator)
 (libraries
  capsule.std
  capsule.tm
  yocaml
  yocaml_yaml
  yocaml_otoml
  yocaml_jingoo
  yocaml_cmarkit
  yocaml_syndication
  cmarkit
  hilite
  hilite.markdown
  kohai.core
  kohai.model
  yocaml_kohai
  yocaml_rensai)
 (modules_without_implementation intf))

(include_subdirs qualified)
